[package]
name = "polyglot-aoc-challenger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.25", features = ["full"] }
hyper-router = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = {version = "1.27.0", features = ["full"] }
